# doniai-nav

./: .env  .env.example  .gitignore  README.md  docker-compose.yml  index.html  package-lock.json  package.json  postcss-font-display.js  purgecss.config.js  vite.config.js  vue.config.js
nginx/: default.conf
public/: index.html  m.css  robots.txt
scripts/: migrate-icons.cjs  migrate-icons.mjs
server/: Cargo.toml  Dockerfile  data_cache.json  docker-compose.yml
server/src/: fetcher.rs  main.rs  models.rs
src/: App.vue  main.js
src/components/: AppIcon.vue  Avatar.vue  BackTop.vue  Clock.vue  Countdown.vue  Footer.vue  LunarTime.vue  Marquee.vue  MediaResource.vue  MonitorProbe.vue  Music.vue  MusicPlayer.vue  Navbar.vue  News.vue  OrugaIconAdapter.vue  PageProgressBar.vue  PricePanel.vue  PricePannel.vue  ProcessBar.vue  ScoreInput.vue  SearchInput.vue  Sidebar.vue  SidebarColumn.vue  SidebarPanelState.vue  SystemMonitoring.vue  Todo.vue  UtilDesk.vue  UtilPageColumns.vue  Weather.vue  WeatherTime.vue
src/icons/: fa5Aliases.js  parseFaClass.js  setup.js
src/plugins/: icons.js  oruga.js
src/router/: index.js
src/services/: api.js  api1.js  authApi.js  book.json  data.json  dockerApi.js  filesApi.js  menu.json  monitorApi.js  navApi.js  navData.js  notesApi.js  search.json
src/store/: auth.js
src/styles/: auth-page.less
src/utils/: apiCache.js  bingCover.js  chartJsHelper.js  copyText.js  coverCanvas.js  defer.js  dialog.js  helper.js  jsonTool.js  loanCalc.js  markdown.js  mixin.js  notify.js  pageProgress.js  request.js  serialize.js  warmApp.js  (+3 more)
(+53 files in other folders)
