[package]
name = "doniai_nav_api"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
axum = "0.7"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4" }
tokio-cron-scheduler = "0.10"
once_cell = "1.19"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = true